--- a/packages/crates/metafile/Cargo.toml
+++ b/packages/crates/metafile/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
+uuid = {version = "1.13.1", features = ["v4", "fast-rng"] }
+uuidv7 = "0.1.7"
+getset = "0.1.4"
