--- a/packages/crates/metafile/Cargo.toml
+++ b/packages/crates/metafile/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
+rmp-serde = "1.3.0"
 uuid = {version = "1.13.1", features = ["v4", "fast-rng"] }
 uuidv7 = "0.1.7"
 getset = "0.1.4"
