--- a/packages/crates/metafile/Cargo.toml
+++ b/packages/crates/metafile/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 rmp-serde = "1.3.0"
-uuid = {version = "1.13.1", features = ["v4", "fast-rng"] }
-uuidv7 = "0.1.7"
+ulid = "1.1.4"
 getset = "0.1.4"
+brotli = "7.0.0"
