--- a/packages/crates/Cargo.toml
+++ b/packages/crates/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["metafile", "naming_convention"]
+members = ["metafile", "naming_convention", "project_core"]
