--- a/packages/crates/project_core/Cargo.toml
+++ b/packages/crates/project_core/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+rmp-serde = "1.3.0"
+ulid = "1.1.4"
+getset = "0.1.4"
+brotli = "7.0.0"
+metafile = { path = "../metafile" }
